--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -24,6 +24,12 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="ui text menu">
+                    <div class="item">
+                        <h5 class="ui header">Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</h5>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
