Style adjustments in the alert list

--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -27,7 +27,7 @@
 
                 <div class="ui text menu">
                     <div class="item">
-                        <h5 class="ui header">Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</h5>
+                        <div>Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</div>
                     </div>
                 </div>
             </div>
