--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -27,18 +27,21 @@
         <div class="ui container" show.bind="originalAlerts.length">
             <div class="ui link cards">
                 <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts">
+                    <div class="content">
+                        <i class="right floated red circular remove icon" click.delegate="removeAlert(alert)"></i>
+                        <a class="header" route-href="route: alert; params.bind: { alertId: alert.id }">${alert.title}</a>
+                        <div class="meta">
+                            <small>Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</small>
+                        </div>
+                    </div>
                     <a route-href="route: alert; params.bind: { alertId: alert.id }" class="image">
                         <img src.bind="alert.imageUrl">
                     </a>
-                    <a route-href="route: alert; params.bind: { alertId: alert.id }" class="content">
-                        <div class="header">${alert.title}</div>
-                        <div class="meta">
-                            Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}
-                        </div>
-                    </a>
                     <div class="extra content" show.bind="alert.isActive">
                         <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank" class="right floated">
-                            ${alert.bestCurrentDeal.price | price} at ${alert.bestCurrentDeal.source.name}
+                            ${alert.bestCurrentDeal.price | price} at
+                            <img class="ui avatar image" src="/images/${alert.bestCurrentDeal.source.domain}-small.png">
+                            ${alert.bestCurrentDeal.source.name}
                         </a>
                     </div>
                 </div>
@@ -62,7 +65,7 @@
             <div class="ui text loader">Updating</div>
         </div>
 
-        <confirmation-modal header="Delete alert" message="Are you sure you want to delete this alert?"></confirmation-modal>
+        <confirmation-modal header="Delete alert" message="Are you sure you want to delete this product alert?"></confirmation-modal>
 
         <add-source class="${isCreatingAlert ? 'loading' : ''}" add.call="create(newAlertUrl)" cancel.call="cancel()"></add-source>
     </div>
