--- a/src/user/settings/account.html
+++ b/src/user/settings/account.html
@@ -1,10 +1,5 @@
 <template>
     <div class="ui container">
-        <div class="ui big circular icon red button" click.delegate="addSource()"
-            style="position: absolute; top: calc(-1.3em); right: 20%;">
-            <i class="plus icon"></i>
-        </div>
-
         <form class="ui ${loading ? 'loading' : ''} form" submit.delegate="save()" role="form">
             <div class="ui relaxed basic section" style="width: 80%; margin: 0 auto;">
                 <div class="ui text menu">
@@ -24,9 +19,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="field">
-                    <label>Email</label>
-                    <input value.bind="user.email" type="email" name="information[email]" placeholder="Email">
+                <div class="fields">
+                    <div class="eight wide field">
+                        <label>Email</label>
+                        <input value.bind="user.email" type="email" name="information[email]" placeholder="Email">
+                    </div>
                 </div>
                 
                 <button class="ui primary primary-action button">Save</button>
