--- a/src/user/settings/alert.html
+++ b/src/user/settings/alert.html
@@ -1,10 +1,5 @@
 <template>
     <div class="ui container">
-        <div class="ui big circular icon red button" click.delegate="addSource()"
-            style="position: absolute; top: calc(-1.3em); right: 20%;">
-            <i class="plus icon"></i>
-        </div>
-
         <form class="ui ${loading ? 'loading' : ''} form" submit.delegate="save()" role="form">
             <div class="ui relaxed basic section" style="width: 80%; margin: 0 auto;">
                 <div class="ui text menu">
@@ -16,14 +11,14 @@
                 <div class="field">
                     <div class="ui checkbox">
                         <input type="checkbox" tabindex="0" class="hidden" checked.bind="settings.alertOnPriceDrop">
-                        <label>Alert me when the best price of an alert drops</label>
+                        <label>Alert me when the best price of an alert <b>drops</b></label>
                     </div>
                 </div>
 
                 <div class="field">
                     <div class="ui checkbox">
                         <input type="checkbox" tabindex="0" class="hidden" checked.bind="settings.alertOnPriceRaise">
-                        <label>Alert me when the best price of an alert raises</label>
+                        <label>Alert me when the best price of an alert <b>raises</b></label>
                     </div>
                 </div>
 
@@ -37,7 +32,7 @@
 
                     <div class="field">
                         <div class="ui right labeled ${settings.specifyChangePercentage ? '' : 'disabled'} input">
-                            <input type="number" value.bind="changePercentage" min="0" max="100" step="1" placeholder="Change">
+                            <input type="number" value.bind="changePercentage" min="0" max="100" step="1">
                             <div class="ui label">%</div>
                         </div>
                     </div>
