--- a/src/user/alert/index.html
+++ b/src/user/alert/index.html
@@ -10,7 +10,7 @@
                 Product Alert
             </h2>
 
-            <img class="ui small inline image" src="https://images-na.ssl-images-amazon.com/images/I/71kliP%2BCIfL._SX522_.jpg" style="vertical-align: bottom;">
+            <img class="ui small inline image" src.bind="imageUrl" style="vertical-align: inherit;">
             <span style="margin-left: 1em; display: inline-block;">
                 <h1 class="ui sixteen wide h3 transparent icon input field" style="margin-top: 1em;">
                     <i class="edit icon" style="color: white; position: absolute; left: 0; background: rgba(255, 255, 255, 0.3); border-radius: .28571429rem 0 0 .28571429rem; width: 2.67142857rem !important;"></i>
