--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -26,7 +26,7 @@
     <div class="primary-light">
         <div class="ui container" show.bind="originalAlerts.length">
             <div class="ui link cards">
-                <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts" style="border-radius: 2px">
+                <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts | sort:'title'" style="border-radius: 2px">
                     <div class="content">
                         <i class="right floated red circular remove icon" click.delegate="removeAlert(alert)"></i>
                         <a class="header" route-href="route: alert; params.bind: { alertId: alert.id }">${alert.title}</a>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <a route-href="route: alert; params.bind: { alertId: alert.id }" class="image">
-                        <img src.bind="alert.imageUrl">
+                        <img class="${alert.isPortaitSize ? 'portrait' : ''} ${alert.isLandscapeSize ? 'landscape' : ''}" src.bind="alert.imageUrl">
                     </a>
                     <div class="extra content">
                         <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank" class="right floated" show.bind="alert.isActive">
