Major style adjustments; logo and favicon added; Usage of PriceWise name

--- a/src/user/nav-bar.html
+++ b/src/user/nav-bar.html
@@ -3,7 +3,8 @@
         <div class="ui container" style="position: relative;">
             <div class="ui inverted secondary pointing menu" style="padding: 1em 0;">
                 <a route-href="route: alerts" class="item">
-                    <img src="http://hemsolucoesfinanceira.com.br/img/logo.png">
+                    <img src="/images/pricewise-logo.png">
+                    <span style="padding-left: 1em;">PriceWise</span>
                 </a>
                 
                 <div class="right icon menu">
