--- a/src/user/alert/history.html
+++ b/src/user/alert/history.html
@@ -1,10 +1,12 @@
 <template>
+    <require from="../components/price-graph"></require>
+    
     <div class="ui stackable center aligned grid container">
         <div class="fourteen wide column">
             <div class="ui stackable center aligned vertically padded grid">
                 <div class="twelve wide column">
                     <h3 class="ui header">Price history</h3>
-                    <price-graph title.one-time="" data.one-way="alertHistory"></price-graph>
+                    <price-graph data.one-way="alertHistory"></price-graph>
                 </div>
             </div>
         </div>
