--- a/src/welcome.html
+++ b/src/welcome.html
@@ -3,9 +3,9 @@
         <div class="ui inverted vertical masthead center aligned segment primary-dark">
             <div class="ui container">
                 <div class="ui large secondary inverted pointing menu">
-                    <!--<a repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''} item" href.bind="row.href">
-                        ${row.title}
-                    </a>-->
+                    <div class="item">
+                        <img src="/images/pricewise-logo.png">
+                    </div>
                     <div class="right item">
                         <a if.bind="!isAuthenticated" class="ui inverted button" click.delegate="login()">Log in</a>
                         <a if.bind="isAuthenticated" class="ui inverted button" click.delegate="logout()">Log out</a>
@@ -14,12 +14,11 @@
             </div>
 
             <div class="ui text container">
-                <h1 class="ui inverted header">
-                    price. alerts.
-                </h1>
+                <h1 class="ui inverted header">PriceWise</h1>
                 <h3>Planning to buy something?</h3>
                 <h2>Stop paying too much!</h2>
                 <a class="ui huge primary primary-action button">Get Started <i class="right arrow icon"></i></a>
+                <h5>Monitor products, and get notified when their price drops.</h5>
             </div>
         </div>
 
@@ -66,8 +65,8 @@
         <div class="ui alternate stripe vertical segment">
             <div class="ui stackable center aligned grid container">
                 <div class="fourteen wide column">
-                    <h1 class="ui icon header" style="font-weight: normal;font-size: 2.5rem;">
-                        <i class="ui dollar icon"></i>
+                    <img class="ui centered small image" src="/images/pricewise-logo.png" style="margin-top: 3em;">
+                    <h1 class="ui center aligned header" style="font-weight: normal;font-size: 2.5rem;">
                         Start saving money
                     </h1>
                     <div class="ui stackable center aligned vertically padded grid">
@@ -82,6 +81,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="ui ${isAuthenticating ? 'active': ''} inverted dimmer">
+            <div class="ui text loader">Authenticating</div>
         </div>
     </div>
 </template>
