Added links to the welcome page

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -17,7 +17,7 @@
                 <h1 class="ui inverted header">PriceWise</h1>
                 <h3>Planning to buy something?</h3>
                 <h2>Stop paying too much!</h2>
-                <a class="ui huge primary primary-action button">Get Started <i class="right arrow icon"></i></a>
+                <a class="ui huge primary primary-action button" click.delegate="login()">Get Started <i class="right arrow icon"></i></a>
                 <h5>Monitor products, and get notified when their price drops.</h5>
             </div>
         </div>
@@ -73,7 +73,7 @@
                         <div class="eight wide column">
                             <h3 class="ui header">Knowledge is your advantage</h3>
                             <p>Shop more wisely, and know when prices drop. That's when you can act!</p>
-                            <a class="ui large right labeled primary primary-action icon button">
+                            <a class="ui large right labeled primary primary-action icon button" click.delegate="login()">
                                 <i class="right chevron icon"></i>
                                 Get Started Now
                             </a>
