Added a graph screenshot

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -36,7 +36,7 @@
                         <p>Analyse the patterns, see when the prices raised or dropped, and act accordingly.</p>
                     </div>
                     <div class="six wide right floated column">
-                        <img src="https://semantic-ui.com/examples/assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
+                        <img src="/images/screen-graph.png" class="ui large bordered rounded image">
                     </div>
                 </div>
             </div>
