--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -9,7 +9,7 @@
 
         <form class="ui form" submit.delegate="save()" role="form">
             <div class="ui relaxed items" style="width: 80%; margin: 0 auto;">
-                <div repeat.for="entry of alert.entries" class="item" style="margin: 2.5em 0;">
+                <div repeat.for="entry of alert.entries | sort:'lastPrice'" class="item" style="margin: 2.5em 0;">
                     <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank">
                         <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
                     </a>
