Removed the round add button in the alerts list when there are no alert

--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -16,7 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="ui big circular icon red button au-target" click.delegate="addAlert()" hide.bind="isAdding" 
+            <div class="ui big circular icon red button au-target" click.delegate="addAlert()" show.bind="originalAlerts.length"
                 style="position: absolute; bottom: calc(-0.58571429em); right: 10%;">
                 <i class="plus icon"></i>
             </div>
