--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -8,15 +8,15 @@
                     <h1 class="ui header" style="color: white; font-size: 3rem; font-weight: 200;">Watched products</h1>
                 </div>
         
-                <div class="right item" show.bind="originalAlerts.length">
+                <!--<div class="right item" show.bind="alerts.length">
                     <div class="ui icon input">
                         <input value.bind="searchString &amp; debounce:400" placeholder="Search..." type="text" class="au-target">
                         <i class="search link icon au-target" hide.bind="searchString.length"></i>
                         <i class="remove icon au-target aurelia-hide" show.bind="searchString.length" click.delegate="clearSearch()"></i>
                     </div>
-                </div>
+                </div>-->
             </div>
-            <div class="ui big circular icon red button au-target" click.delegate="addAlert()" show.bind="originalAlerts.length"
+            <div class="ui big circular icon red button au-target" click.delegate="addAlert()" show.bind="alerts.length"
                 style="position: absolute; bottom: calc(-0.58571429em); right: 10%;">
                 <i class="plus icon"></i>
             </div>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="primary-light">
-        <div class="ui container" show.bind="originalAlerts.length">
+        <div class="ui container" show.bind="alerts.length">
             <div class="ui link cards">
                 <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts | sort:'title'" style="border-radius: 2px">
                     <div class="content">
@@ -53,7 +53,7 @@
             </div>
         </div>
         
-        <div class="ui overlay" hide.bind="originalAlerts.length">
+        <div class="ui overlay" hide.bind="alerts.length">
             <div style="width: 100%; position: absolute; top: 50%; left: 0;">
                 <p style="text-align: center;">You are not watching any product right now.</p>
                 <p style="text-align: center;">Get started!</p>
@@ -72,6 +72,6 @@
 
         <confirmation-modal header="Delete alert" message="Are you sure you want to delete this product alert?"></confirmation-modal>
 
-        <add-source class="${isCreatingAlert ? 'loading' : ''}" add.call="create(newAlertUrl)" cancel.call="cancel()"></add-source>
+        <add-source class="add-source-modal" class-name="${isCreatingAlert ? 'loading' : ''}" close.call="removeModal()" add.call="create(newAlertUrl)"></add-source>
     </div>
 </template>
