Added a Add button in the alert page

--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -25,6 +25,17 @@
                     </div>
                 </div>
 
+                <div class="item">
+                    <div class="middle aligned content">
+                        <div class="header">
+                            <div class="circular ui icon medium red button" click.delegate="addSource()">
+                                <i class="icon plus"></i>
+                            </div>
+                        </div>
+                        Add another source for this product
+                    </div>
+                </div>
+
                 <div class="ui text menu">
                     <div class="item">
                         <div>Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</div>
