Fixed the loading and source adding in the alert page

--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -49,7 +49,7 @@
         <div class="ui text loader">Updating</div>
     </div>
 
-    <add-source containerless class="${isCreatingAlert ? 'loading' : ''}" add.call="addEntry(newAlertUrl)" cancel.call="cancel()"></add-source>
+    <add-source class-name="${isAddingSource ? 'loading' : ''}" close.call="removeModal()" add.call="addEntry(newAlertUrl)"></add-source>
 
     <confirmation-modal header="Delete alert" message="Are you sure you want to delete the selected entry in this alert?"></confirmation-modal>
 </template>
