Changed the Add Source button

--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -28,7 +28,7 @@
                 <div class="item">
                     <div class="middle aligned content">
                         <div class="header">
-                            <div class="circular ui icon medium red button" click.delegate="addSource()">
+                            <div class="ui icon medium primary primary-action button" click.delegate="addSource()">
                                 <i class="icon plus"></i>
                             </div>
                         </div>
