--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -8,34 +8,47 @@
         </div>
 
         <form class="ui form" submit.delegate="save()" role="form">
-            <div class="ui relaxed items" style="width: 80%; margin: 0 auto;">
-                <div repeat.for="entry of alert.entries | sort:'lastPrice'" class="item" style="margin: 2.5em 0;">
-                    <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank">
-                        <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
-                    </a>
-                    <div class="middle aligned content">
-                        <a class="header" href.bind="entry.uri" target="_blank">${entry.lastPrice | price}</a>
-                    </div>
-                    <div class="six wide field extra">
-                        <div class="left floated content">
+            <table class="ui very basic padded table" style="width: 60%; margin: 0 auto;">
+                <thead>
+                    <tr>
+                        <th>Source</th>
+                        <th>Price</th>
+                        <th />
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr repeat.for="entry of alert.entries | sort:'lastPrice'">
+                        <td class="collapsing">
+                            <div class="ui image header">
+                                <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank">
+                                    <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <h4>
+                                <a class="header" href.bind="entry.uri" target="_blank">${entry.lastPrice | price}</a>
+                            </h4>
+                        </td>
+                        <td class="collapsing">
                             <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)">
                                 <i class="icon remove"></i>
                             </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="middle aligned content">
-                        <div class="header">
-                            <div class="ui icon medium primary primary-action button" click.delegate="addSource()">
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot class="full-width">
+                    <tr>
+                        <th colspan="3">
+                            <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()">
                                 <i class="icon plus"></i>
+                                Add another source for this product
                             </div>
-                        </div>
-                        Add another source for this product
-                    </div>
-                </div>
-
+                        </th>
+                    </tr>
+                </tfoot>
+            </table>
+            <div class="ui relaxed items" style="width: 80%; margin: 0 auto;">
                 <div class="ui text menu">
                     <div class="item">
                         <div>Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</div>
