--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -3,7 +3,9 @@
 
     <div class="ui container">
         <div class="ui big circular icon red button" click.delegate="addSource()"
-            style="position: absolute; top: calc(-1.3em); right: 20%;">
+            style="position: absolute; top: calc(-1.3em); right: 20%;"
+            data-analytics-category="sources"
+            data-analytics-action="add">
             <i class="plus icon"></i>
         </div>
 
@@ -20,7 +22,10 @@
                     <tr repeat.for="entry of alert.entries | sort:'lastPrice'">
                         <td class="collapsing">
                             <div class="ui image header">
-                                <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank">
+                                <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank"
+                                    data-analytics-category="Outbound Link"
+                                    data-analytics-action="click"
+                                    data-analytics-label.bind="entry.uri">
                                     <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
                                 </a>
                             </div>
@@ -31,7 +36,9 @@
                             </h4>
                         </td>
                         <td class="collapsing">
-                            <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)">
+                            <div class="ui basic circular red icon button" click.delegate="removeEntry(entry)"
+                                data-analytics-category="sources"
+                                data-analytics-action="remove">
                                 <i class="icon remove"></i>
                             </div>
                         </td>
@@ -40,7 +47,9 @@
                 <tfoot class="full-width">
                     <tr>
                         <th colspan="3">
-                            <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()">
+                            <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()"
+                                data-analytics-category="sources"
+                                data-analytics-action="add">
                                 <i class="icon plus"></i>
                                 Add another source for this product
                             </div>
