--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -17,7 +17,9 @@
                 </div>-->
             </div>
             <div class="ui big circular icon red button au-target" click.delegate="addAlert()" show.bind="alerts.length"
-                style="position: absolute; bottom: calc(-0.58571429em); right: 10%;">
+                style="position: absolute; bottom: calc(-0.58571429em); right: 10%;"
+                data-analytics-category="alerts"
+                data-analytics-action="add">
                 <i class="plus icon"></i>
             </div>
         </div>
@@ -28,7 +30,9 @@
             <div class="ui link cards">
                 <div class="${alert.isActive ? 'green' : 'inactive'} card" repeat.for="alert of alerts | sort:'title'" style="border-radius: 2px">
                     <div class="content">
-                        <i class="right floated red circular remove icon" click.delegate="removeAlert(alert)"></i>
+                        <i class="right floated red circular button remove icon" click.delegate="removeAlert(alert)"
+                            data-analytics-category="alerts"
+                            data-analytics-action="remove"></i>
                         <a class="header" route-href="route: alert; params.bind: { alertId: alert.id }">${alert.title}</a>
                         <div class="meta">
                             <small show.bind="alert.isActive">Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</small>
@@ -39,12 +43,17 @@
                         <img class="${alert.isPortaitSize ? 'portrait' : ''} ${alert.isLandscapeSize ? 'landscape' : ''}" src.bind="alert.imageUrl">
                     </a>
                     <div class="extra content">
-                        <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank" class="right floated" show.bind="alert.isActive">
+                        <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank" class="right floated" show.bind="alert.isActive"
+                            data-analytics-category="Outbound Link"
+                            data-analytics-action="click"
+                            data-analytics-label.bind="alert.bestCurrentDeal.productUrl">
                             ${alert.bestCurrentDeal.price | price} at
                             <img class="ui avatar image" src="/images/${alert.bestCurrentDeal.source.domain}-small.png">
                             ${alert.bestCurrentDeal.source.name}
                         </a>
-                        <a class="right floated primary-action-hover" click.delegate="activateAlert(alert)" hide.bind="alert.isActive">
+                        <a class="right floated primary-action-hover" click.delegate="activateAlert(alert)" hide.bind="alert.isActive"
+                            data-analytics-category="alerts"
+                            data-analytics-action="activate">
                             <i class="toggle on icon"></i>
                             Activate
                         </a>
@@ -58,7 +67,9 @@
                 <p style="text-align: center;">You are not watching any product right now.</p>
                 <p style="text-align: center;">Get started!</p>
                 <div style="text-align: center;">
-                    <div class="ui primary primary-action button" click.delegate="addAlert()">
+                    <div class="ui primary primary-action button" click.delegate="addAlert()"
+                        data-analytics-category="alerts"
+                        data-analytics-action="add">
                         <i class="plus icon"></i>
                         Create a product alert
                     </div>
