Added a label of source add button

--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -5,7 +5,8 @@
         <div class="ui big circular icon red button" click.delegate="addSource()"
             style="position: absolute; top: calc(-1.3em); right: 20%;"
             data-analytics-category="sources"
-            data-analytics-action="add">
+            data-analytics-action="add"
+            data-analytics-label="top button">
             <i class="plus icon"></i>
         </div>
 
@@ -15,7 +16,7 @@
                     <tr>
                         <th>Source</th>
                         <th>Price</th>
-                        <th />
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -49,7 +50,8 @@
                         <th colspan="3">
                             <div class="ui icon labeled medium primary primary-action button" click.delegate="addSource()"
                                 data-analytics-category="sources"
-                                data-analytics-action="add">
+                                data-analytics-action="add"
+                                data-analytics-label="list button">
                                 <i class="icon plus"></i>
                                 Add another source for this product
                             </div>
