Fixed misleading and unused properties

--- a/src/user/alert/index.html
+++ b/src/user/alert/index.html
@@ -1,6 +1,6 @@
 <template>
     <div class="primary-dark" style="color: white;">
-        <div class="ui container" style="position: relative; padding: 3em 0 0 0;">
+        <div class="ui container alert" style="position: relative; padding: 3em 0 0 0;">
             <h2 style="font-weight: 200; margin: 0 0 1em 0;">
                 <a class="basic circular ui icon inverted button" route-href="route: alerts;">
                     <i class="large inverted chevron left icon"></i>
