--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -62,7 +62,7 @@
             <div class="ui relaxed items" style="width: 80%; margin: 0 auto;">
                 <div class="ui text menu">
                     <div class="item">
-                        <div>Last updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</div>
+                        <div>Best deal updated ${alert.bestCurrentDeal.modifiedAt | timeAgo}</div>
                     </div>
                 </div>
             </div>
