Used affiliate links from api

--- a/src/user/alerts.html
+++ b/src/user/alerts.html
@@ -46,7 +46,7 @@
                         <a href.bind="alert.bestCurrentDeal.productUrl" target="_blank" class="right floated" show.bind="alert.isActive"
                             data-analytics-category="Outbound Link"
                             data-analytics-action="click"
-                            data-analytics-label.bind="alert.bestCurrentDeal.productUrl">
+                            data-analytics-label.bind="alert.bestCurrentDeal.originalUrl">
                             ${alert.bestCurrentDeal.price | price} at
                             <img class="ui avatar image" src="/images/${alert.bestCurrentDeal.source.domain}-small.png">
                             ${alert.bestCurrentDeal.source.name}
