--- a/src/user/alert/sources.html
+++ b/src/user/alert/sources.html
@@ -23,17 +23,17 @@
                     <tr repeat.for="entry of alert.entries | sort:'lastPrice'">
                         <td class="collapsing">
                             <div class="ui image header">
-                                <a class="image" style="width: initial;" href.bind="entry.uri" target="_blank"
+                                <a class="image" style="width: initial;" href.bind="entry.productUrl" target="_blank"
                                     data-analytics-category="Outbound Link"
                                     data-analytics-action="click"
-                                    data-analytics-label.bind="entry.uri">
+                                    data-analytics-label.bind="entry.originalUrl">
                                     <img src="/images/${entry.source.domain}-small.png" style="width: 50px; height: 50px; margin: 0;">
                                 </a>
                             </div>
                         </td>
                         <td>
                             <h4>
-                                <a class="header" href.bind="entry.uri" target="_blank">${entry.lastPrice | price}</a>
+                                <a class="header" href.bind="entry.productUrl" target="_blank">${entry.lastPrice | price}</a>
                             </h4>
                         </td>
                         <td class="collapsing">
