Setup for the localization

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -21,7 +21,7 @@
 
             <div class="ui text container">
                 <h1 class="ui inverted header">PriceWise</h1>
-                <h3>Planning to buy something?</h3>
+                <h3 t="lives_indefinite">Planning to buy something?</h3>
                 <h2>Stop paying too much!</h2>
                 <a class="ui huge primary primary-action button" click.delegate="login()">Get Started <i class="right arrow icon"></i></a>
                 <h5>Monitor products, and get notified when their price drops.</h5>
